Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23445

LIMIT ROWS EXAMINED throws error in Debug build only

    XMLWordPrintable

Details

    Description

      On a merge from 10.2 to 10.3, I had to adjust the MDEV-14836 test case, because the Debug build so that an error will be returned upon exceeding the limit. But, the RelWithDebInfo build would not issue any error, only a warning.

      In order to prevent non-debug builds from failing on the CI system, I will temporarily apply the following change to work around this bug:

      diff --git a/mysql-test/main/information_schema.test b/mysql-test/main/information_schema.test
      index dd2b723e6ee..22baad77a69 100644
      --- a/mysql-test/main/information_schema.test
      +++ b/mysql-test/main/information_schema.test
      @@ -20,6 +20,8 @@
       --source include/default_optimizer_switch.inc
       --source include/default_charset.inc
       
      +--source include/maybe_debug.inc
      +
       set global sql_mode="";
       set local sql_mode="";
       
      @@ -1930,9 +1932,14 @@ SELECT SCHEMA_NAME from information_schema.schemata where schema_name=REPEAT('a'
       --echo # Diagnostics_area::sql_errno upon query from I_S with LIMIT ROWS EXAMINED
       --echo #
       
      +if ($have_debug) {
       --error ER_UNKNOWN_ERROR
       SELECT * FROM INFORMATION_SCHEMA.`COLUMNS` LIMIT ROWS EXAMINED 10;
       SHOW WARNINGS;
      +}
      +if (!$have_debug) {
      +SELECT * FROM INFORMATION_SCHEMA.`COLUMNS` LIMIT ROWS EXAMINED 10;
      +}
       
       --echo #
       --echo # End of 10.2 Test
      

      This change should be reverted as part of fixing the bug.

      Attachments

        Issue Links

          Activity

            People

              rucha174 Rucha Deodhar
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: